# datastar-hs-examples

./: .gitignore  LICENSE  README.md  cabal.project  datastar-hs-examples.cabal  deploy.yml  inventory.ini
deploy/: Caddyfile.hamalainen.dev  datastar-hs.service.j2  index.html
examples/: heap-view.hs
