cabal-version:   3.0
name:            datastar-hs-examples
version:         0.1.0.0
synopsis:        Examples for the datastar-hs package
license:         MIT
license-file:    LICENSE
author:          Carlo Hamalainen
maintainer:      carlo@carlo-hamalainen.net
category:        Web, Hypermedia
build-type:      Simple

executable hello-world-warp
  main-is:          hello-world-warp.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-types
    , text
    , wai
    , warp
    , datastar-hs
  ghc-options: -threaded

executable hello-world-servant
  main-is:          hello-world-servant.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    DataKinds
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    TypeOperators
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-media
    , http-types
    , servant-server
    , tagged
    , text
    , wai
    , warp
    , datastar-hs
  ghc-options: -threaded

executable hello-world-channel
  main-is:          hello-world-channel.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-types
    , stm
    , text
    , wai
    , warp
    , datastar-hs
  ghc-options: -threaded

executable activity-feed
  main-is:          activity-feed.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , text
    , time
    , http-types
    , wai
    , warp
    , datastar-hs
  ghc-options: -threaded

executable heap-view
  main-is:          heap-view.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
  build-depends:
    , base >= 4.7
    , bytestring
    , containers
    , ghc-heap
    , http-types
    , stm
    , text
    , uuid
    , wai
    , warp
    , datastar-hs
  ghc-options: -threaded -O0
